# phase

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Tiltfile
.claude/skills/oracle-parser/: SKILL.md
.claude/skills/pr-contribution-handler/: SKILL.md
.claude/skills/pr-review-loop/: SKILL.md
.claude/skills/review-impl/: SKILL.md
.github/workflows/: auto-label-ai-contribution.yml  ci.yml  deploy.yml  release.yml
client/: package.json  pnpm-lock.yaml
client/public/feeds/: mtggoldfish-commander.json  mtggoldfish-modern.json  mtggoldfish-pioneer.json  mtggoldfish-standard.json
client/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src/adapter/: draft-adapter.ts  engine-worker.ts  p2p-adapter.ts  server-draft-adapter.ts  types.ts  ws-adapter.ts
client/src/animation/: eventNormalizer.ts  types.ts
client/src/constants/: game.ts
client/src/data/: formatRegistry.ts
client/src/game/: autoPass.ts  castPaymentMode.ts  diceContest.ts  dispatch.ts  sessionCleanup.ts  waitingForRegistry.ts
client/src/hooks/: useAttackerArrowPositions.ts  useCanHover.ts  useCardHover.ts  useCardImage.ts  useConcedeHandler.ts  useLongPress.ts  usePlayerId.ts  useRafPositions.ts  useSpectatorMode.ts
client/src/network/: connection.ts  peer.ts
client/src/pages/: DraftSpectatorPage.tsx  GamePage.tsx  GameSetupPage.tsx  MenuPage.tsx  MultiplayerPage.tsx
client/src/providers/: GameProvider.tsx
client/src/services/: brokerClient.ts  cardImageLookup.ts  deckCompatibility.ts  deckParser.ts  deckUrlImport.ts  draftSpectatorSession.ts  engineRuntime.ts  playtestDeck.ts  scryfall.ts  serverDetection.ts
client/src/stores/: cloudSyncStore.ts  draftSpectatorStore.ts  gameStore.ts  multiplayerStore.ts  preferencesStore.ts  uiStore.ts
client/src/utils/: objectAnchorSelector.ts
client/src/viewmodel/: costLabel.ts  deckSample.ts  gameStateView.ts  keywordProps.ts  logSearch.ts
client/src/wasm/: engine_wasm.d.ts
crates/draft-core/src/: cube.rs
crates/engine-wasm/src/: lib.rs
crates/engine/src/: starter_decks.rs
crates/engine/tests/: conditional_cost_reduction_3223.rs  conspire_granted_keyword.rs  craterhoof_behemoth_dynamic_pump_2875.rs  end_combat_phase.rs  i_call_for_slaughter.rs  najeela_extra_combat_grant_2898.rs  omnath_unspent_green_mana_2887.rs  rankle_and_torbran.rs  razorkin_needlehead_opponent_draw_damage_2869.rs  roiling_vortex_upkeep_damage_2891.rs  scry_choice_not_clobbered_by_triggers.rs  swords_life_equals_power_counters_2895.rs  taii_wakeen.rs  worldfire_each_player_life_total_2882.rs
crates/feed-scraper/src/: main.rs
crates/lobby-broker/: Cargo.toml
crates/lobby-broker/src/: broker.rs  env.rs  inbound_guard.rs  lib.rs  lobby.rs  protocol.rs  reservation_auth.rs  validation.rs
crates/manabrew-compat/src/: lib.rs
crates/mtgish-import/: CLAUDE.md
crates/phase-ai/src/: card_hints.rs  cast_facts.rs  combat_ai.rs  damage_reflection.rs  decision_kind.rs  lib.rs  search.rs  tactical_gate.rs
crates/phase-ai/tests/: ai_quality.rs  decision_trace.rs  (+2 more)
crates/phase-server/: Cargo.toml
crates/phase-server/src/: admin.rs  main.rs  persistence.rs
data/: engine-inventory.json
docs/: AI-CONTRIBUTOR.md
lobby-worker/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
lobby-worker/broker-wasm/: Cargo.toml
lobby-worker/broker-wasm/.cargo/: config.toml
lobby-worker/broker-wasm/src/: lib.rs
lobby-worker/src/: import-deck.ts  index.ts  lobby-do.ts  protocol.ts  turn.ts  wasm-modules.d.ts
lobby-worker/test/: import-deck.test.mjs
scripts/: add_cast_payment_mode_auto.py  build-broker-wasm.sh  build-wasm.sh  check-parser-combinators.sh  clean-target.sh  deploy-cf.sh  gen-card-data.sh  gen-scryfall-images.sh  gen-scryfall-printings.sh
scripts/lib/: detect-cross-product-alts.py
supabase/: schema.sql
(+861 files in other folders)
